更改了一些个性化

--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -1,6 +1,6 @@
 
 <!--文章列表-->
-<div class="wrapper">
+<div class="wrapper" id="wrapper">
   <% if(index){ %>
     <ul class="posts-list mb+ js-posts">
       <% page.posts.each(function(post,i){ %>
