--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -4,7 +4,6 @@
 		<%if(theme.count.enable){%>
 			<span>本站总访问量 <span id="busuanzi_value_site_pv"></span> 次, 访客数 <span id="busuanzi_value_site_uv"></span> 人次</span>
 		<%}%>
-		<span>Theme by <a href="http://github.com/justpsvm">justpsvm</a>. Powered by <a href="http://hexo.io">Hexo</a></span>
 	</div>
 </footer>
 
@@ -15,7 +14,7 @@
 	<%- js('js/module') %>
 	<%- js('js/script') %>
 	<%if(theme.count.enable){%>
-		<script async src="http://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+		<!-- <script async src="http://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
 	<%}%>
 	<script type='text/javascript'>
 		//代码高亮
