--- a/source/css/_font.styl
+++ b/source/css/_font.styl
@@ -25,6 +25,13 @@
 .icon-twitter:before { content: "\e600"; }
 .icon-github:before { content: "\ee2c"; }
 .icon-next:before { content: "\e619"; }
+.icon-up{
+                  -webkit-transform: rotate(180deg);
+                 -moz-transform: rotate(180deg);
+                 -o-transform: rotate(180deg);
+                 -ms-transform: rotate(180deg);
+                 transform: rotate(180deg);
+}
 .icon-douban:before { content: "\e680"; }
 .icon-icon:before { content: "\e610"; }
 .icon-search:before { content: "\348d"; }
