--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -211,7 +211,7 @@ article .post-body ol {
 }
 
 article .post-body ol li:before {
-    content: counter(ol-counter) ".";
+    // content: counter(ol-counter) ".";
     counter-increment: ol-counter
 }
 article .post-body blockquote {
