--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,26 +1,27 @@
-
 <footer class="footer" role="contentinfo">
 	<div class="wrapper wrapper--wide split split--responsive">
+		<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 		<%if(theme.count.enable){%>
-			<span>本站总访问量 <span id="busuanzi_value_site_pv"></span> 次, 访客数 <span id="busuanzi_value_site_uv"></span> 人次</span>
+		<span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次, 访客数 <span
+				id="busuanzi_value_site_uv"></span></span>
 		<%}%>
 	</div>
 </footer>
 
 	<!-－这里导入了 lib.js 里面涵盖了 jQuery 等框架 所以注释掉-->
 	<!--<%- js('http://lib.sinaapp.com/js/jquery/2.0/jquery.min') %>-->
-	<%- js('js/lib') %>
-	<%- js('js/google-code-prettify/prettify') %>
-	<%- js('js/module') %>
-	<%- js('js/script') %>
-	<%if(theme.count.enable){%>
+		<%- js('js/lib') %>
+		<%- js('js/google-code-prettify/prettify') %>
+		<%- js('js/module') %>
+		<%- js('js/script') %>
+		<%if(theme.count.enable){%>
 		<!-- <script async src="http://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
-	<%}%>
+		<%}%>
 	<script type='text/javascript'>
 		//代码高亮
-		$(document).ready(function(){
-	 		$('pre').addClass('prettyprint linenums').attr('style', 'overflow:auto;');
-   			prettyPrint();
+		$(document).ready(function () {
+			$('pre').addClass('prettyprint linenums').attr('style', 'overflow:auto;');
+			prettyPrint();
 		});
 	</script>
 	</body>
