--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -14,6 +14,10 @@
 		<%- js('js/google-code-prettify/prettify') %>
 		<%- js('js/module') %>
 		<%- js('js/script') %>
+		<%- js('assets/algolia/algoliasearch.min') %>
+		<%- js('//cdn.bootcss.com/instantsearch.js/1.7.1/instantsearch.min') %>
+		<%- js('js/search') %>
+
 		<%if(theme.count.enable){%>
 		<!-- <script async src="http://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
 		<%}%>
