--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <%
+
+<head>
+  <meta charset="utf-8">
+  <%
   	  var title = page.title;
 
   	  if (is_archive()){
@@ -19,19 +20,19 @@
   	    title = __('tag') + ': ' + page.tag;
   	  }
     %>
-    <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <% if (theme.rss){ %>
-      <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
-    <% } %>
-    <% if (theme.favicon){ %>
-      <link rel="icon" href="<%- theme.favicon %>">
-    <% } %>
+  <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <% if (theme.rss){ %>
+  <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
+  <% } %>
+  <% if (theme.favicon){ %>
+  <link rel="icon" href="<%- theme.favicon %>">
+  <% } %>
 
-    <%- css('css/style') %>
+  <%- css('css/style') %>
+  <%- css('css/search') %>
+  <%- css('js/google-code-prettify/tomorrow-night-eighties.min') %>
 
-    <%- css('js/google-code-prettify/tomorrow-night-eighties.min') %>
+</head>
 
-  </head>
-
-  <body>
+<body>
