--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -7,20 +7,21 @@
 		<%}%>
 	</div>
 </footer>
+		
+ 		<!--这里导入了 lib.js 里面涵盖了 jQuery 等框架 所以注释掉-->
 
-	<!-－这里导入了 lib.js 里面涵盖了 jQuery 等框架 所以注释掉-->
-	<!--<%- js('http://lib.sinaapp.com/js/jquery/2.0/jquery.min') %>-->
+		<!--<%- js('http://lib.sinaapp.com/js/jquery/2.0/jquery.min') %>-->
 		<%- js('js/lib') %>
 		<%- js('js/google-code-prettify/prettify') %>
 		<%- js('js/module') %>
 		<%- js('js/script') %>
 		<%- js('assets/algolia/algoliasearch.min') %>
-		<%- js('//cdn.bootcss.com/instantsearch.js/1.7.1/instantsearch.min') %>
 		<%- js('js/search') %>
-
 		<%if(theme.count.enable){%>
 		<!-- <script async src="http://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
 		<%}%>
+	<script async src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
+
 	<script type='text/javascript'>
 		//代码高亮
 		$(document).ready(function () {
