--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -28,11 +28,11 @@
   <% if (theme.favicon){ %>
   <link rel="icon" href="<%- theme.favicon %>">
   <% } %>
-
   <%- css('css/style') %>
   <%- css('css/search') %>
   <%- css('js/google-code-prettify/tomorrow-night-eighties.min') %>
-
+  <link rel="icon" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css">
+  <script src="https://cdn.bootcss.com/instantsearch.js/1.7.1/instantsearch.min.js"></script>
 </head>
 
 <body>
